...
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="@color/white"
    >

  <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?android:attr/actionBarSize"
      android:background="@color/grey_h"
      android:theme="@style/ThemeOverlay.AppCompat.Dark"
      app:navigationIcon="?attr/homeAsUpIndicator"
      app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
...
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:orientation="vertical"
      >

    <LinearLayout
        android:id="@+id/linlayout_fragmenthome_public_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        >

...
          android:gravity="center"
          android:text="New ZIL Wallet ?"
          android:textColor="@color/grey_h"
          android:textSize="16sp"
          />
      <Button
          android:id="@+id/button_new_account"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"
          android:background="@drawable/button_send"
          android:text="GENERATE NEW WALLET"
          android:textAppearance="@style/TextAppearance.Title"
          android:textColor="@color/White"
          />

    </LinearLayout>

...
            android:textSize="16sp"
            android:importantForAutofill="no"
            />
      </android.support.design.widget.TextInputLayout>

      <Button
          android:id="@+id/button_new_account_import"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"
          android:background="@drawable/button_send"
          android:text="IMPORT WALLET"
          android:textAppearance="@style/TextAppearance.Title"
          android:textColor="@color/White"
          />
    </LinearLayout>

  </LinearLayout>
...
