<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">xZIL</string>
  <string name="action_settings">Settings</string>
  <string name="send_feedback">Send Feedback</string>
  <string name="version">Beta 0.1</string>
  <string name="dialog_action_ok">OK</string>
  <string name="generic_error_title">Error</string>
  <string name="scan_barcode">Scan QR Code</string>
  <string name="we_need_camera_permission">We need the camera permission in order to scan the QR
    Code
  </string>
  <string name="xcontinue">CONTINUE</string>
  <string name="erase_everything">erase_everything</string>
  <string name="share_using">Share Using</string>
  <string name="pin">PIN</string>
  <string name="repeat_pin">REPEAT PIN</string>
  <string name="unlock">UNLOCK</string>
  <string name="change_pin">Change PIN</string>
  <string name="permissions_are_needed">
    <![CDATA[We need CAMERA for scanning QR Codes and Storage permissions in order for this xZIL to work]]></string>
  <string name="before_we_start">Before we start, we need couple of permissions.</string>
  <string name="confirm_payment">Confirm Payment</string>
  <string name="appbar_scrolling_view_behavior" translatable="false">
    android.support.design.widget.AppBarLayout$ScrollingViewBehavior
  </string>
  <string name="tos_terms">
    If you continue, you agree to proceed to xZIL, a third party service. We use https://dev-api.zilliqa.com" for
    all the Blockchain interaction. This also can be viewed if you disassemble the application as no obfuscation is done.
    Your wallet is stored on your device. We DO NOT have access to your public address, private
    keys, pin code. All your
    interactions with xZIL are outside of xZIL\'s control and are subject to
    xZIL\'s Terms of Service. All information that you may provide to xZIL App will be subject to
    xZIL\'s Privacy Policy and will not be collected, stored, or used by
    xZIL.\n\nxZIL ACCEPTS NO RESPONSIBILITY AND WILL NOT BE LIABLE FOR ANY LOSS OR
    DAMAGE WHATSOEVER
    SUFFERED AS A RESULT OF ACCESSING, USE OF, OR RELIANCE UPON xZIL INFORMATION AND SERVICES.
  </string>
  <string name="confirm_seed">Confirm Seed</string>
  <string name="action_manage_wallets">Manage Wallets</string>
  <string name="wallet_creation">Wallet Creation</string>
  <string name="export_wallets">Export Wallets</string>
  <string name="private_key">private key</string>
</resources>
