...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


  <LinearLayout
      android:id="@+id/linLayout_new_account_all"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
...
          android:text="private key..."
          android:textColor="@color/white"
          android:textSize="20sp"
          />
    </LinearLayout>
    <CheckBox
        android:id="@+id/checkBox_seed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="0"
        android:background="@color/white"
...
          android:textColor="@color/White"
          android:textStyle="bold"
          style="?android:attr/borderlessButtonStyle"
          />

      <Button
          android:id="@+id/btn_continue"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_marginLeft="4dp"
          android:layout_weight="1"
          android:background="@drawable/button_send"
          android:text="CONTINUE"
...
