...
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


  <LinearLayout
      android:id="@+id/linlayoutTopBalance"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="vertical"
      >

...
          android:textSize="16sp"
          tools:text="... ZIL"
          />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_fragmentHome_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="loading..."
        android:textColor="@color/grey_h"
...
